--- a/style.css
+++ b/style.css
@@ -67,10 +67,12 @@ nav ul li a:hover, a.active{
 }
 .plus-minus-btn{
     color: #3352F2;
-    font-size: 30px;
+    font-size: 15px;
     padding: 2px;
     margin-top: 10px;
     word-spacing: 20px;
+    background: none;
+    border: none;
 }
 .booking-form  .calculations{
     margin: 10px 0;
